force-app/main/default/objects/InstallationOrder__c/InstallationOrder__c.object-meta.xml
<CustomObject>
    <description>Object to follow up the progress of the installation service. It is the continuation of the Installation Request (InstallationRequest__c)</description>
    <label>Installation Order</label>
    <nameField>
        <label>Installation Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installation Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>