force-app/main/default/objects/InstallationOrder__c/fields/CustomerComments__c.field-meta.xml
<CustomField>
    <fullName>CustomerComments__c</fullName>
    <inlineHelpText>Please enter the customer comments about the installation works</inlineHelpText>
    <label>Customer Comments</label>
    <type>TextArea</type>
</CustomField>