force-app/main/default/objects/InstallationOrder__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>Enter the date the installation works will end</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>