force-app/main/default/objects/InstallationOrder__c/fields/failReason__c.field-meta.xml
<CustomField>
    <fullName>failReason__c</fullName>
    <description>Please enter the main customer&apos;s unsatisfaction reason</description>
    <inlineHelpText>Please enter the main customer&apos;s unsatisfaction reason</inlineHelpText>
    <label>Unsatisfaction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>failReason</valueSetName>
    </valueSet>
</CustomField>