force-app/main/default/objects/InstallationOrder__c/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Installation works finished</inlineHelpText>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>