force-app/main/default/objects/InstallationOrder__c/fields/Installation_Request__c.field-meta.xml
<CustomField>
    <fullName>Installation_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Request</label>
    <referenceTo>InstallationRequest__c</referenceTo>
    <relationshipLabel>Installation Orders</relationshipLabel>
    <relationshipName>Installation_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>