force-app/main/default/objects/InstallationOrder__c/fields/Installer_Partner__c.field-meta.xml
<CustomField>
    <fullName>Installer_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installation Orders</relationshipLabel>
    <relationshipName>Installation_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>