force-app/main/default/objects/InstallationOrder__c/fields/InstallerAccount__c.field-meta.xml
<CustomField>
    <fullName>InstallerAccount__c</fullName>
    <formula>Installation_Request__r.InstallerAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InstallerAccount</label>
    <type>Text</type>
</CustomField>