force-app/main/default/objects/InstallationOrder__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Installation Notes</label>
    <type>TextArea</type>
</CustomField>