force-app/main/default/objects/InstallationOrder__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>Enter the date the installation works will begin</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>