force-app/main/default/objects/InstallationOrder__c/validationRules/VR01_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Scheduled</fullName>
    <active>true</active>
    <description>Rule to set the state as Scheduled</description>
    <errorConditionFormula>ISPICKVAL( State__c , &apos;Scheduled&apos;) &amp;&amp;  
(
isblank(StartDate__c) ||isblank( EndDate__c )
)</errorConditionFormula>
    <errorMessage>Start and End date required to set the installation order as &quot;Scheduled&quot;</errorMessage>
</ValidationRule>