force-app/main/default/objects/InstallationOrder__c/validationRules/VR02_Finished.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Finished</fullName>
    <active>true</active>
    <description>Transition to Finished state</description>
    <errorConditionFormula>ISPICKVAL( State__c , &apos;Finished&apos;) &amp;&amp;
 Finished__c = false</errorConditionFormula>
    <errorMessage>Please set the installation order as finished</errorMessage>
</ValidationRule>