force-app/main/default/objects/InstallationOrder__c/validationRules/VR03_Customer_Unsatisfied.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_Customer_Unsatisfied</fullName>
    <active>true</active>
    <description>Transition to customer unsatisfied</description>
    <errorConditionFormula>ISPICKVAL( State__c , &apos;Customer Unsatisfied&apos;)
&amp;&amp; 
isblank(text( failReason__c ))</errorConditionFormula>
    <errorMessage>please enter the reasons why the customer is not satisfied</errorMessage>
</ValidationRule>