force-app/main/default/objects/InstallationOrder__c/listViews/Installation_Orders_Closed.listView-meta.xml
<ListView>
    <fullName>Installation_Orders_Closed</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Installation_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Finished,Customer Satisfied,Customer Unsatisfied</value>
    </filters>
    <label>Installation Orders - Closed</label>
</ListView>