force-app/main/default/objects/InstallationOrder__c/listViews/My_Installation_Orders.listView-meta.xml
<ListView>
    <fullName>My_Installation_Orders</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Finished__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Installation Orders</label>
</ListView>